# tcc-estacio

./: Pipfile  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
data/: criptoativos_dados_abertos_07082023.xls  criptoativos_dados_abertos_09072023.xls
notebook/: main.ipynb
source/: criptoativos_dados_abertos_02032023.xls  criptoativos_dados_abertos_09072023.xls
