[tool.poetry]
name = "tcc-estacio"
version = "0.1.0"
description = ""
authors = ["Thamires Falbo <111710331+thamiresfalbo@users.noreply.github.com>"]
readme = "README.md"
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
xlrd = "^2.0.1"
babel = "^2.12.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
